--- a/public/index.html
+++ b/public/index.html
@@ -7,45 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Tetris</title>
 
-    <style>
-        body {
-            background: #000;
-            color: #fff;
-            font-family: sans-serif;
-            font-size: 2em;
-        }
-
-        .contatiner {
-            text-align: center;
-            display: flex;
-        }
-
-        .player {
-            flex: 1 1 auto;
-        }
-
-        canvas {
-            border: solid .2em #fff;
-            height: 90vh;
-        }
-
-        canvas.winner {
-            border: solid .3em #A00;
-            transition: border 3s ease;
-        }
-
-        button {
-            position: absolute;
-            right: 10px;
-            background-color: #4CAF50;
-            border: none;
-            color: white;
-            padding: 5px 15px;
-            text-align: center;
-            text-decoration: none;
-            font-size: 16px;
-        }
-    </style>
+    <link type="text/css" rel='stylesheet' href="css/styles.css">
 
     <script type="module" src="js/main.js"></script>
 </head>
@@ -53,7 +15,7 @@
 <body>
     <button id="start">Start</button>
 
-    <div class="contatiner">
+    <div class="container">
         <div class="player">
             <div class="score">0</div>
             <canvas class="screen" width="240" height="400"></canvas>
